# customer-employee-detection

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  batch_app.py  calibrate.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
profiles/: shop1.json
src/customer_employee_detection/: __init__.py
tests/: test_detection.py  test_example.py
