[project]
name = "customer-employee-detection"
version = "0.1.0"
description = "CCTV staff vs customer detection — YOLOv8 + ResNet50 re-ID + Gradio UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "gradio>=4.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "Pillow>=9.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

# ─── Ruff: formatter + linter ────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear (common bug patterns)
    "S",   # flake8-bandit (basic security checks)
    "RUF", # ruff-specific rules
]
ignore = [
    "S101", # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]   # relax security rules in test files

# ─── Mypy: type checker ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # torch/cv2/ultralytics stubs not always available

# ─── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit   = ["tests/*"]
